# ftl2

./: .ftl2-state.json  .gitignore  CHANGELOG.md  CLAUDE.md  FINAL_REPORT.md  HISTORY.md  IMPLEMENTATION_1_1.md  IMPLEMENTATION_1_2.md  ITERATION_1_HUMAN_REVIEW.md  ITERATION_1_UNDERSTANDING.md  PLAN_1.md  README.md  REPLAY_IMPLEMENTATION.md  REVIEW_1_1.md  REVIEW_1_2.md  ROADMAP.md  TASK.md  TESTER_1_1.md  beliefs.md  demo_crash_recovery.py  nogoods.md  pyproject.toml  test_replay.py  test_replay_params.py  test_replay_secrets.py
.github/workflows/: ci.yml
docs/: automatic-backups.md
entries/2026/03/05/: ftl2-improvements-for-rhel-9-compatibility.md  ftl2-supports-python-39-on-managed-hosts.md
entries/2026/03/24/: diff-main.md
entries/iteration-1/: implementer_1.md  implementer_2.md  planner.md  reviewer_1.md  reviewer_2.md  tester_1.md  user.md
examples/: README.md  STATUS.md
examples/02-remote-ssh/: inventory.yml
examples/03-multi-host/: inventory.yml  setup.sh
examples/04-ftl-modules/: README.md  docker-compose.yml  example_ansible_modules.py  example_comparison.py  example_local.py  example_remote.py
examples/05-event-streaming/: README.md  docker-compose.yml  example_remote_streaming.py  example_streaming.py
examples/06-automation-context/: README.md  example_fqcn_modules.py  example_phase1_basic.py  example_phase2_inventory.py  example_phase3_secrets.py  example_phase4_check_mode.py  example_phase5_output.py  example_phase6_error_handling.py  example_secret_bindings.py
examples/08-gcp-automation/: README.md  example_gcp_provision.py  example_gcp_teardown.py
examples/09-hetzner/: README.md  example_hetzner_web_stack.py
examples/policies/: development-permissive.yaml  production-guardrails.yaml
examples/policies/layered/: 00-base.yaml  10-production.yaml
implementer/: IMPLEMENTATION.md  REVIEW.md  test_host_range.py
planner/: PLAN.md
reviewer/: REVIEW.md
src/ftl2/: __init__.py  backup.py  builder.py  cli.py  collection.py  config_profiles.py  coverage.py  events.py  exceptions.py  executor.py  gate.py  host_filter.py  inventory.py  logging.py  message.py  module_docs.py  policy.py  progress.py  refs.py  retry.py  runners.py  safety.py  ssh.py  telemetry.py  types.py  utils.py  vars.py  vault.py  workflow.py
src/ftl2/automation/: __init__.py  become.py  context.py  proxy.py
src/ftl2/ftl_gate/: __main__.py
src/ftl2/ftl_modules/: __init__.py  command.py  dnf.py  exceptions.py  executor.py  file.py  http.py  pip.py  swap.py  wait_for.py
src/ftl2/ftl_modules/aws/: __init__.py  ec2.py  route53.py
src/ftl2/ftl_modules/gcp/: __init__.py  artifact_registry.py  cloud_run.py  compute.py  secret_manager.py
src/ftl2/module_loading/: __init__.py  bundle.py  dependencies.py  excluded.py  executor.py  fqcn.py  requirements.py
src/ftl2/modules/: copy.py  file.py  ping.py  setup.py  shell.py
src/ftl2/state/: __init__.py  execution.py  file.py  merge.py  state.py
tester/: RESULTS.md  REVIEW.md  TESTER.md  TESTER_1_1.md  USAGE.md  test_become_edge_cases.py  test_circuit_breaker_zero_div.py  test_retract_and_close.sh
tests/: __init__.py  conftest.py  test_arguments.py  test_auth_classification_tester.py  test_automation.py  test_backup.py  test_become.py  test_become_edge_cases.py  test_become_kwargs.py  test_bundle.py  test_chunk_guard.py  test_ci_coverage_config.py  test_ci_ssh.py  test_circuit_breaker_zero_div.py  test_circuit_breaker_zero_division.py  test_circuit_breaker_zero_hosts.py  test_classify_error_auth.py  test_cli.py  test_collection.py  test_connectionerror_rename.py  test_context_error_handling.py  test_copy_multi_host.py  test_coverage.py  test_coverage_ci.py  test_dependencies.py  test_empty_yaml_issue28.py  test_events.py  test_excluded_modules.py  test_failure_observations.py  test_fnmatch_case_sensitivity.py  test_fqcn.py  test_fqcn_allowlist.py  test_fqcn_allowlist_tester.py  test_ftl_executor.py  test_ftl_gate.py  test_ftl_modules.py  test_ftl_modules_phase2.py  test_ftlmodule_error_handling.py  test_gate.py  test_gate_events_bundling.py  (+44 more)
tools/: ftl2_htop.py  ftl2_state_to_inventory.py  gate_debug_remote.py
