[project]
name = "ftl2"
version = "0.1.0"
description = "Refactored faster-than-light automation framework with dataclasses and composition"
authors = [{name = "Ben Thomasson", email = "ben.thomasson@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "asyncssh>=2.14.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "httpx>=0.24.0",
    "rich>=13.0.0",
    "importlib-resources>=5.0; python_version < '3.9'",
    "ftl-module-utils @ git+https://github.com/benthomasson/ftl_module_utils",
    "ftl-builtin-modules @ git+https://github.com/benthomasson/ftl_builtin_modules",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "mypy>=1.8.0",
]
aws = [
    "aioboto3>=11.0.0",
]

[project.urls]
Homepage = "https://github.com/benthomasson/ftl2"
Repository = "https://github.com/benthomasson/ftl2.git"
Issues = "https://github.com/benthomasson/ftl2/issues"

[project.scripts]
ftl2 = "ftl2.cli:main"
ftl-gate-builder = "ftl2.builder:entry_point"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ftl2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=ftl2",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/ftl2/ftl_gate/__main__.py",  # Gate runtime runs as subprocess, not unit tested
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80

[tool.ruff]
src = ["src", "tests"]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "N818",   # exception naming (ModuleNotFound matches Python convention)
    "UP047",  # generic type parameters (not needed for simple cases)
    "SIM105", # try-except-pass is clearer than contextlib.suppress in shutdown code
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # allow assert in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
